<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    tools:context=".Inicio">
    <ImageView
        android:id="@+id/pi_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pi_tv_texto_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/pi_tv_texto_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantalla_inicio_texto_1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/pi_tv_texto_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/pi_iv_logo"/>

    <TextView
        android:id="@+id/pi_tv_texto_2"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantalla_inicio_texto_2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pi_btn_1"
        app:layout_constraintTop_toBottomOf="@id/pi_tv_texto_1" />

    <Button
        android:id="@+id/pi_btn_1"
        android:padding="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/pantalla_inicio_texto_3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pi_tv_texto_2" />
</androidx.constraintlayout.widget.ConstraintLayout>